src/tests/InvalidTests/VariableDeclaration1.agl
cellSize : Number = 200;

cellSize = 250; # OK

cellSize = "Joao"; # Error. Expression type does not conform to variable type!
